--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -4,9 +4,8 @@
     <title>Create Event</title>
 </head>
 <body>
-
+<div th:replace="fragments :: page-header"></div>
 <h1>Create Event</h1>
-
 <form method="post" style="max-width:600px;">
     <div class="form-group">
         <label th:for="name">Name</label>
@@ -26,8 +25,8 @@
         <span th:errors="${event.description}" class="error"></span>
     </div>
 
-    <input type="submit" value="Create Event" />
-</form>
+    <input type="submit" class="btn btn-primary" value="Create Event" />
 
+</form>
 </body>
 </html>
