--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -8,14 +8,26 @@
 </head>
 <body>
 
-<nav th:fragment="header">
-    <h1 th:text="${title}">Events</h1>
-    <ul>
-        <li><a href="/events">All Events</a></li>
-        <li><a href="/events/create">Create Event</a></li>
-        <li><a th:href="@{/login}">Log In</a></li>
-        <li><a th:href="@{/logout}">Log Out</a></li>
-    </ul>
+<div th:fragment="page-header" class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <a th:href="@{/}" class="navbar-brand">Event Planning</a>
+        </div>
+        <div class="navbar-collapse collapse">
+          <ul>
+              <li><a th:href="@{/login}">Log In</a></li>
+              <li><a href="/search">Search Events</a></li>
+              <li><a href="/events">All Events</a></li>
+              <li><a href="/add">Create Event</a></li>
+              <li><a th:href="@{/logout}">Log Out</a></li>
+          </ul>
+        </div>
+    </div>
+</div>
+
+
+<nav th:fragment="log-out">
+    <p><a class="nav-link" hreftype="submit" href="/logout">Log Out</a></p>
 </nav>
 
 
