--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -2,6 +2,8 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <body class="container">
 
+<div th:replace="fragments :: page-header"></div>
+
 <form method="post">
     <div class="form-group">
         <label>Username
@@ -18,6 +20,19 @@
     <div class="form-group">
         <label>Verify Password
             <input class="form-control" th:field="${registrationFormDTO.verifyPassword}" type="password" />
+        </label>
+    </div>
+
+    <div class="form-check">
+        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1"checked>
+        <label class="form-check-label" for="flexRadioDefault1">
+            Volunteer
+        </label>
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
+        <label class="form-check-label" for="flexRadioDefault2">
+            Organization
         </label>
     </div>
 
