--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -9,9 +9,10 @@
 <body>
 
 <nav th:fragment="header">
-    <h1 th:text="${title}">Events</h1>
+
     <ul>
         <li><a href="/events">All Events</a></li>
+       <li><a th:href="@{/search}">Search</a></li>
         <li><a href="/events/create">Create Event</a></li>
         <li><a th:href="@{/login}">Log In</a></li>
         <li><a th:href="@{/logout}">Log Out</a></li>
