--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -13,7 +13,7 @@
     <ul>
         <li><a href="/events">All Events</a></li>
        <li><a th:href="@{/search}">Search</a></li>
-        <li><a href="/events/create">Create Event</a></li>
+        <li><a href="/add">Create Event</a></li>
         <li><a th:href="@{/login}">Log In</a></li>
         <li><a th:href="@{/logout}">Log Out</a></li>
     </ul>
