--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -37,7 +37,7 @@
     <table class="event-listing">
         <tr th:each="event : ${events}">
             <td>
-                <p th:text="${'Event Id: ' + event.id}"></p>
+                <!--<p th:text="${'Event Id: ' + event.id}"></p>-->
                 <p th:text="${'Name: ' + event.name}"></p>
                 <p th:text="${'Location: ' + event.location}"></p>
                 <p th:text="${'Description: ' + event.description}"> </p>
