Finished search-feature with feedback message for no matches

--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -34,6 +34,7 @@
 
     <hr />
     <h3 th:text="${title}">Events</h3>
+    <h3 th:text="${message}"></h3>
     <table class="event-listing">
         <tr th:each="event : ${events}">
             <td>
