--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -23,17 +23,13 @@
         </label>
     </div>
 
-    <div class="form-check">
-        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1"checked>
-        <label class="form-check-label" for="flexRadioDefault1">
-            Volunteer
-        </label>
-    </div>
-    <div class="form-check">
-        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
-        <label class="form-check-label" for="flexRadioDefault2">
-            Organization
-        </label>
+    <div class="form-group">
+        <label for="role">Account Type:</label>
+
+        <select name="role" id="role" th:field="${registrationFormDTO.role}">
+            <option value="organization">Organization</option>
+            <option value="volunteer">Volunteer</option>
+        </select>
     </div>
 
     <input type="submit" class="btn btn-primary" value="Register" />
