--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 
-<div th:replace="fragments :: header"></div>
+<div th:replace="fragments :: page-header"></div>
 
 <div class="container body-content">
 
@@ -16,13 +16,13 @@
                 <input
                         type="radio"
                         name="searchType"
-                  th:id="${column.key}"
-                  th:value="${column.key}"
-                  th:checked="${column.key == 'all'}"/>
+                        th:id="${column.key}"
+                        th:value="${column.key}"
+                        th:checked="${column.key == 'all'}"/>
           <label th:for="${column.key}" th:text="${column.value}"></label>
       </span>
 
-  </p>
+        </p>
 
         <p>
             <label for="searchTerm">Keyword:</label>
