--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -1,3 +1,28 @@
 body {
   font-size: 18px;
 }
+
+table.event-details {
+    margin: 30px auto;
+    border: 1px solid #e4e4e4;
+    width: 60%;
+}
+.centered {
+    text-align: center;
+}
+
+p {
+    vertical-align: top;
+    margin-left: 30px;
+}
+
+.centeredTable {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+div.event-details {
+    border: 1px solid #e4e4e4;
+    width: 40%;
+    background-color: #e4e4e4;
+}
