--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -3,8 +3,10 @@
 <head th:fragment="head">
     <meta charset="UTF-8"/>
     <title>Event Planning</title>
-    <link rel="stylesheet" th:href="@{/styles.css}">
-    <script th:src="@{/script.js}"></script>
+    <link rel="stylesheet" th:href="@{/css/styles.css}">
+    <script th:src="@{/js/script.js}"></script>
+    <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>-->
 </head>
 <body>
 
@@ -24,5 +26,8 @@
         </div>
     </div>
 </div>
+
+
+
 </body>
 </html>
