--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -1,32 +1,33 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org/">
+<html lang="en" xmlns:th="http://www.thymeleaf.org/" xmlns="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <title>Create Event</title>
 </head>
 <body>
 <div th:replace="fragments :: page-header"></div>
-<h1>Create Event</h1>
-<form method="post" style="max-width:600px;">
-    <div class="form-group">
-        <label th:for="name">Name</label>
-        <input class="form-control" th:field="${event.name}" />
-        <span th:errors="${event.name}" class="error"></span>
+    <div sec:authorize="hasRole('organization')">
+
+        <h1>Create Event</h1>
+        <form method="post" style="max-width:600px;">
+            <div class="form-group">
+                <label th:for="name">Name</label>
+                <input class="form-control" th:field="${event.name}" />
+                <span th:errors="${event.name}" class="error"></span>
+            </div>
+
+            <div class="form-group">
+                <label th:for="name">Location</label>
+                <input class="form-control" th:field="${event.location}" />
+                <span th:errors="${event.location}" class="error"></span>
+            </div>
+
+            <div class="form-group">
+                <label th:for="name">Description</label>
+                <input class="form-control" th:field="${event.description}" />
+                <span th:errors="${event.description}" class="error"></span>
+            </div>
+            <input type="submit" class="btn btn-primary" value="Create Event" />
+        </form>
     </div>
-
-    <div class="form-group">
-        <label th:for="name">Location</label>
-        <input class="form-control" th:field="${event.location}" />
-        <span th:errors="${event.location}" class="error"></span>
-    </div>
-
-    <div class="form-group">
-        <label th:for="name">Description</label>
-        <input class="form-control" th:field="${event.description}" />
-        <span th:errors="${event.description}" class="error"></span>
-    </div>
-
-    <input type="submit" class="btn btn-primary" value="Create Event" />
-
-</form>
 </body>
 </html>
