Binds the getUserFormSession(session) in EventController

--- a/src/main/resources/templates/events.html
+++ b/src/main/resources/templates/events.html
@@ -7,6 +7,7 @@
 
 <body>
 <div th:replace="fragments :: page-header"></div>
+<p th:text = "${user.id}"></p>
 <h1>Your Events</h1>
 <ul>
     <li th:each="event : ${events}">
