--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -6,7 +6,7 @@
 <body>
 <div th:replace="fragments :: page-header"></div>
   <!--  <div sec:authorize="hasRole('organization')"> -->
-<!--<h2 th:if = '${userSelection.equals("organization")}'>You can do better!</h2>-->
+<!--<div th:if = '${user.role.equals("organization")}'>You can do better!</div>-->
 
         <h1>Create Event</h1>
         <form method="post" style="max-width:600px;">
