--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -38,10 +38,10 @@
     <table class="event-listing">
         <tr th:each="event : ${events}">
             <td>
-                <!--<p th:text="${'Event Id: ' + event.id}"></p>-->
-                <p th:text="${'Name: ' + event.name}"></p>
-                <p th:text="${'Location: ' + event.location}"></p>
-                <p th:text="${'Description: ' + event.description}"> </p>
+                <p>
+                    <a>Event Name: </a>
+                    <a th:href="@{'/view/' + ${event.id}}" th:text="${event.name}"></a>
+                </p>
             </td>
         </tr>
     </table>
