--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -3,25 +3,26 @@
 <head>
     <title>Create Event</title>
 </head>
-<body>
-<div th:replace="fragments :: page-header"></div>
+<body class="container">
+<header th:replace="fragments :: page-header"></header>
         <h1>Create Event</h1>
         <form method="post" style="max-width:600px;">
             <div class="form-group">
-                <label th:for="name">Name</label>
-                <input class="form-control" th:field="${event.name}" />
+                <label th:for="name">Name
+                    <input class="form-control" th:field="${event.name}" />
+                </label>
                 <span th:errors="${event.name}" class="error"></span>
             </div>
-
             <div class="form-group">
-                <label th:for="name">Location</label>
-                <input class="form-control" th:field="${event.location}" />
+                <label th:for="name">Location
+                    <input class="form-control" th:field="${event.location}" />
+                </label>
                 <span th:errors="${event.location}" class="error"></span>
             </div>
-
             <div class="form-group">
-                <label th:for="name">Description</label>
-                <input class="form-control" th:field="${event.description}" />
+                <label th:for="name">Description
+                    <input class="form-control" th:field="${event.description}" />
+                </label>
                 <span th:errors="${event.description}" class="error"></span>
             </div>
             <input type="submit" class="btn btn-primary" value="Create Event" />
