--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -3,26 +3,27 @@
 <head th:fragment="head">
     <meta charset="UTF-8"/>
     <title>Event Planning</title>
-    <link rel="stylesheet" th:href="@{/styles.css}">
-    <script th:src="@{/script.js}"></script>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"></script>
+
+   <!-- <link rel="stylesheet" th:href="@{/styles.css}">-->
+   <!-- <script th:src="@{/script.js}"></script>-->
 </head>
 <body>
-<div th:fragment="page-header" class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
-        <div class="navbar-header">
+<nav class="navbar" th:fragment="page-header">
+   <!-- <div class="container">-->
+       <!-- <h1 class="navbar-header">
             <a th:href="@{/}" class="navbar-brand">Event Planning</a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul>
-              <li th:unless = "${session.role != null}"><a th:href="@{/login}">Log In</a></li>
-              <li><a href="/search">Search Events</a></li>
-              <li><a href="/events">All Events</a></li>
-              <li th:if = "${session != null && session.role == 'organization'}"><a href="/add">Create Event</a></li>
-              <li th:unless = "${session.role == null}"><a th:href="@{/logout}">Log Out</a></li>
-
+        </h1>-->
+        <!--<div class="navbar-collapse collapse">-->
+          <ul >
+              <li class="nav-item" th:unless = "${session.role != null}"><a class="nav-link" th:href="@{/login}">Log In</a></li>
+              <li class="nav-item"><a class="nav-link" href="/search">Search Events</a></li>
+              <li class="nav-item"><a class="nav-link" href="/events">All Events</a></li>
+              <li class="nav-item" th:if = "${session != null && session.role == 'organization'}"><a class="nav-link" href="/add">Create Event</a></li>
+              <li class="nav-item" th:unless = "${session.role == null}"><a class="nav-link" th:href="@{/logout}">Log Out</a></li>
           </ul>
-        </div>
-    </div>
-</div>
+</nav>
 </body>
 </html>
