bootstrap.css,bootstrap.js

--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/" xmlns="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<head>
-    <title>Create Event</title>
-</head>
+<head th:replace="fragments :: head"></head>
 <body class="container">
 <header th:replace="fragments :: page-header"></header>
         <h1>Create Event</h1>
