--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org/">
-<head>
-    <meta charset="UTF-8">
-    <title>Event Planning</title>
-</head>
+<head th:replace="fragments :: head"></head>
 <body>
     <div th:replace="fragments :: page-header"></div>
 </body>
