--- a/src/main/resources/templates/delete.html
+++ b/src/main/resources/templates/delete.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org/">
-<head>
-    <title>Title</title>
-</head>
+<head th:replace="fragments :: head"></head>
 <body>
 <h1>Are you sure you want to delete this event?</h1>
 <form method="post" style="max-width:600px;" th:action="@{'/delete/' + ${event.id}}">
