--- a/src/main/resources/templates/events.html
+++ b/src/main/resources/templates/events.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org/">
-<head>
-    <meta charset="UTF-8">
-    <title>Event Planner</title>
-</head>
-
+<head th:replace="fragments :: head"></head>
 <body>
 <div th:replace="fragments :: page-header"></div>
 <h1>Your Events</h1>
