--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -2,28 +2,25 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org/" xmlns="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:fragment="head">
     <meta charset="UTF-8"/>
-    <title>Event Planning</title>
-
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"></script>
-
-   <!-- <link rel="stylesheet" th:href="@{/styles.css}">-->
-   <!-- <script th:src="@{/script.js}"></script>-->
+    <title th:text="${title}"></title>
+    <link th:href="@{/css/bootstrap.css}" rel="stylesheet" />
+    <link th:href="@{/css/styles.css}" rel="stylesheet" />
+    <script type="text/javascript" th:src="@{/js/bootstrap.js}"></script>
 </head>
+
 <body>
-<nav class="navbar" th:fragment="page-header">
-   <!-- <div class="container">-->
-       <!-- <h1 class="navbar-header">
-            <a th:href="@{/}" class="navbar-brand">Event Planning</a>
-        </h1>-->
-        <!--<div class="navbar-collapse collapse">-->
-          <ul >
-              <li class="nav-item" th:unless = "${session.role != null}"><a class="nav-link" th:href="@{/login}">Log In</a></li>
-              <li class="nav-item"><a class="nav-link" href="/search">Search Events</a></li>
-              <li class="nav-item"><a class="nav-link" href="/events">All Events</a></li>
-              <li class="nav-item" th:if = "${session != null && session.role == 'organization'}"><a class="nav-link" href="/add">Create Event</a></li>
-              <li class="nav-item" th:unless = "${session.role == null}"><a class="nav-link" th:href="@{/logout}">Log Out</a></li>
+<nav class="navbar navbar-inverse navbar-fixed-top" th:fragment="page-header">
+    <div class="container">
+        <div class="navbar-collapse collapse">
+          <ul class= "nav navbar-nav">
+              <li th:unless = "${session.role != null}"><a  th:href="@{/login}">Log In</a></li>
+              <li><a href="/search">Search Events</a></li>
+              <li><a  href="/events">All Events</a></li>
+              <li th:if = "${session != null && session.role == 'organization'}"><a href="/add">Create Event</a></li>
+              <li th:unless = "${session.role == null}"><a th:href="@{/logout}">Log Out</a></li>
           </ul>
+        </div>
+    </div>
 </nav>
 </body>
 </html>
