--- a/src/main/resources/templates/events.html
+++ b/src/main/resources/templates/events.html
@@ -14,7 +14,12 @@
         <a th:href="@{'/view/' + ${event.id}}">>View Details</a>
         <a th:href="@{'/update/' + ${event.id}}">Edit</a>
         <a th:href="@{'/delete/' + ${event.id}}">Delete</a>
-        <a th:href="@{'/signup/' + ${event.id}}">Sign Up</a>
+        <a th:if = "${session != null && session.role == 'volunteer'}">
+            <form action="signup.php" method ="post">
+                <input type="hidden" id="eventID" name="eventID" th:value="${event.id}">
+                <input type="submit" value="SignUp">
+            </form>
+        </a>
     </li>
 </ul>
 </body>
