--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/" xmlns="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:replace="fragments :: head"></head>
-<body class="container">
+<body>
 <header th:replace="fragments :: page-header"></header>
+    <div>
         <h1>Create Event</h1>
-        <form method="post" style="max-width:600px;">
-            <div class="form-group">
-                <label th:for="name">Name
-                    <input class="form-control" th:field="${event.name}" />
-                </label>
-                <span th:errors="${event.name}" class="error"></span>
+        <form method="post">
+            <div class="row gx-5">
+                <div class="col">
+                    <label th:for="name" class="form-label">Name
+                        <input class="form-control" th:field="${event.name}" />
+                    </label>
+                    <span th:errors="${event.name}" class="error"></span>
+                </div>
+                <div class="col">
+                    <label th:for="name" class="form-label">Location
+                        <input class="form-control" th:field="${event.location}" />
+                    </label>
+                    <span th:errors="${event.location}" class="error"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <label th:for="name">Location
-                    <input class="form-control" th:field="${event.location}" />
-                </label>
-                <span th:errors="${event.location}" class="error"></span>
-            </div>
-            <div class="form-group">
-                <label th:for="name">Description
+            <div class="col-md-12">
+                <label th:for="name" class="form-label">Description
                     <input class="form-control" th:field="${event.description}" />
                 </label>
                 <span th:errors="${event.description}" class="error"></span>
