--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -3,24 +3,20 @@
 <head th:fragment="head">
     <meta charset="UTF-8"/>
     <title th:text="${title}"></title>
-    <link th:href="@{/css/bootstrap.css}" rel="stylesheet" />
+    <!--<link th:href="@{/css/bootstrap.css}" rel="stylesheet" />
     <link th:href="@{/css/styles.css}" rel="stylesheet" />
-    <script type="text/javascript" th:src="@{/js/bootstrap.js}"></script>
+    <script type="text/javascript" th:src="@{/js/bootstrap.js}"></script>-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </head>
 
 <body>
-<nav class="navbar navbar-inverse navbar-fixed-top" th:fragment="page-header">
-    <div class="container">
-        <div class="navbar-collapse collapse">
-          <ul class= "nav navbar-nav">
-              <li th:unless = "${session.role != null}"><a  th:href="@{/login}">Log In</a></li>
-              <li><a href="/search">Search Events</a></li>
-              <li><a  href="/events">All Events</a></li>
-              <li th:if = "${session != null && session.role == 'organization'}"><a href="/add">Create Event</a></li>
-              <li th:unless = "${session.role == null}"><a th:href="@{/logout}">Log Out</a></li>
+          <ul class= "navbar navbar-expand-lg navbar-light bg-light nav nav-tabs" th:fragment="page-header">
+              <li class ="nav-item" th:unless = "${session.role != null}"><a class="nav-link" th:href="@{/login}">Log In</a></li>
+              <li class ="nav-item"><a class="nav-link" href="/search">Search Events</a></li>
+              <li class ="nav-item"><a class="nav-link" href="/events">All Events</a></li>
+              <li class ="nav-item" th:if = "${session != null && session.role == 'organization'}"><a class="nav-link" href="/add">Create Event</a></li>
+              <li class ="nav-item" th:unless = "${session.role == null}"><a class="nav-link" th:href="@{/logout}">Log Out</a></li>
           </ul>
-        </div>
-    </div>
-</nav>
 </body>
 </html>
