--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -3,31 +3,34 @@
 <head th:replace="fragments :: head"></head>
 <body>
 <header th:replace="fragments :: page-header"></header>
-    <div>
-        <h1>Create Event</h1>
-        <form method="post">
-            <div class="row gx-5">
-                <div class="col">
-                    <label th:for="name" class="form-label">Name
+    <br>
+    <div class="card w-50">
+        <div class="card-header">
+            <h1>Create Event</h1>
+        </div>
+        <div class="card-body">
+            <form method="post">
+                <div class="row gx-5">
+                    <div class="col">
+                        <label th:for="name" class="form-label">Name</label>
                         <input class="form-control" th:field="${event.name}" />
-                    </label>
-                    <span th:errors="${event.name}" class="error"></span>
-                </div>
-                <div class="col">
-                    <label th:for="name" class="form-label">Location
+                        <span th:errors="${event.name}" class="error"></span>
+                    </div>
+                    <div class="col">
+                        <label th:for="name" class="form-label">Location</label>
                         <input class="form-control" th:field="${event.location}" />
-                    </label>
-                    <span th:errors="${event.location}" class="error"></span>
+                        <span th:errors="${event.location}" class="error"></span>
+                    </div>
                 </div>
-            </div>
-            <div class="col-md-12">
-                <label th:for="name" class="form-label">Description
+                <div class="col-md-12">
+                    <label th:for="name" class="form-label">Description</label>
                     <input class="form-control" th:field="${event.description}" />
-                </label>
-                <span th:errors="${event.description}" class="error"></span>
-            </div>
-            <input type="submit" class="btn btn-primary" value="Create Event" />
-        </form>
+                    <span th:errors="${event.description}" class="error"></span>
+                </div>
+                <br>
+                <input type="submit" class="btn btn-primary" value="Create Event" />
+            </form>
+        </div>
     </div>
 </body>
 </html>
