--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
-<body class="container">
-
+<br>
+<body>
 <form method="post">
     <div class="form-group">
         <label th:for="username">Username
@@ -16,7 +16,7 @@
         </label>
         <p class="error" th:errors="${loginFormDTO.password}"></p>
     </div>
-
+    <br>
     <input type="submit" class="btn btn-primary" value="Log In" />
 </form>
 
