--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
-<body class="container">
-
+<body>
 <div th:replace="fragments :: page-header"></div>
-
+<br>
 <form method="post">
     <div class="form-group">
         <label>Username
@@ -23,7 +22,7 @@
             <input class="form-control" th:field="${registrationFormDTO.verifyPassword}" type="password" />
         </label>
     </div>
-
+    <br>
     <div class="form-group">
         <label for="role">Account Type:</label>
 
@@ -32,7 +31,7 @@
             <option value="volunteer">Volunteer</option>
         </select>
     </div>
-
+    <br>
     <input type="submit" class="btn btn-primary" value="Register" />
 </form>
 
