--- a/src/main/resources/templates/events.html
+++ b/src/main/resources/templates/events.html
@@ -22,6 +22,9 @@
                 <br>
                 <a class="col-md-4 btn btn-danger btn-sm" th:href="@{'/delete/' + ${event.id}}">Delete Event</a>
                 <br>
+                <br>
+                <a class="btn btn-primary btn-sm" th:href="@{'/signup/' + ${event.id}}">Sign up for Event</a>
+                <br>
             </div>
         </div>
         <br>
